# nia

./: LICENSE  README.md  setup.cfg
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
examples/: test-abc.py  test.py
nia/: __init__.py  nia.py
nia/abc/: __init__.py  abc.py
nia/cross_overs/: cross_over.py  random_sbx.py  sbx.py
nia/crossovers/: random_sbx.py  sbx.py
nia/ga/: __init__.py  ga.py
nia/mutations/: __init__.py  uniform.py
nia/pso/: __init__.py  pso.py
src/nia/: nia.py
src/nia/algorithms/: __init__.py  abc.py  ga.py  pso.py
src/nia/crossovers/: __init__.py  crossover.py  k_point.py  random_sbx.py  sbx.py
src/nia/mutations/: mutation.py  uniform.py
src/nia/problems/: __init__.py  ackley.py  alpine.py  chung_reynolds.py  cosine_mixture.py  dixon_price.py  griewank.py  pinter.py  powel.py  qing.py  schaffer.py
src/nia/selections/: __init__.py  rank.py  selection.py  tournament.py
