[metadata]
name = nia-salar-shdk
version = 0.0.1
author = salar-shdk
author_email = amir.shdk@yahoo.com
description = Nature Inspired Optimization Algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/salar-shdk/nia
project_urls =
    Bug Tracker = https://github.com/salar-shdk/nia/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
